<resources>
    <string name="app_name">Bank</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_log_in">Log in</string>
    <string name="alert_empty_field">Empty field</string>
    <string name="alert_combination_wrong">This combination isn\'t right</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="photo">Photo</string>
    <string name="status">Status</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="ok_button">OK</string>
    <string name="message_exit">Do you want to exit?</string>
    <string name="button_yes">Yes</string>
    <string name="status_finished">Finished</string>
    <string name="status_denied">Denied</string>
    <string name="status_wait">Wait</string>
</resources>
